--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <main>
          <article>
             <a name="introduction"></a><h2><a href="#home">Personal Introduction</a></h2>
-            <p id="testP" class="funParagraph">Early on in my restaurant career, I took a position as a Sous Chef with a well-known Italian restaurant chain. In this position, I had the opportunity to make many things from scratch - including a wide variety of sauces. I discovered that one of my personal favorite dishes quickly became one that I enjoyed making more than any other. I would like to take this opportunity to share with you a popular dish from classic Italian cuisine.</p>
+            <p id="testP">Early on in my restaurant career, I took a position as a Sous Chef with a well-known Italian restaurant chain. In this position, I had the opportunity to make many things from scratch - including a wide variety of sauces. I discovered that one of my personal favorite dishes quickly became one that I enjoyed making more than any other. I would like to take this opportunity to share with you a popular dish from classic Italian cuisine.</p>
             <img src="images/main.jpg" title="A delicious-looking serving of Chicken Marsala!">
             <figcaption>Chicken cutlets topped with sliced mushrooms in a savory Marsala wine reduction sauce and garnished with chopped parsley.</figcaption>
          
